// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Peers can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createPeer": Object {
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "name": "Create Peer Test",
      "slug": "test-peer",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deletePeer": Any<String>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "peer": Object {
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "name": "Peer Test 3",
      "slug": "test-peer3",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be read in list 1`] = `
Object {
  "data": Object {
    "peers": Array [
      Object {
        "hostURL": "https://host-url.ch/",
        "id": Any<String>,
        "name": "Peer Test 2",
        "slug": "test-peer2",
      },
      Object {
        "hostURL": "https://host-url.ch/",
        "id": Any<String>,
        "name": "Create Peer Test",
        "slug": "test-peer",
      },
      Object {
        "hostURL": "https://host-url.ch/",
        "id": Any<String>,
        "name": "Peer Test 0",
        "slug": "test-peer0",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updatePeer": Object {
      "hostURL": "https://host-url.ch/",
      "id": Any<String>,
      "name": "Updated Peer",
      "slug": "update-peer",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can read peer profile 1`] = `
Object {
  "data": Object {
    "peerProfile": Object {
      "callToActionImage": null,
      "callToActionImageURL": "",
      "callToActionText": Array [],
      "callToActionURL": "",
      "hostURL": "https://fakeURL",
      "logo": null,
      "name": "",
      "themeColor": "#000000",
      "themeFontColor": "#ffffff",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Peers can be created/edited/deleted: can update peer profile 1`] = `
Object {
  "data": Object {
    "updatePeerProfile": Object {
      "callToActionImage": null,
      "callToActionImageURL": null,
      "callToActionText": Array [
        Object {
          "text": "rich text call to action",
        },
      ],
      "callToActionURL": "calltoactionurl.ch/",
      "hostURL": "https://fakeURL",
      "logo": null,
      "name": "test peer profile",
      "themeColor": "#4287f5",
      "themeFontColor": "#d67c15",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
